--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <img src="" alt="cadeado fechado">
     <h2 class="titulo-principal">gerador de senhas</h2>
+    <h3 class="titulo-secundario">gere instataneamente uma senha aleátoria e segura</h3>
 </body>
 </html>
