--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="" alt="cadeado fechado">
+    <img src="aula01_FCF-04.webp" alt="cadeado fechado">
     <h2 class="titulo-principal">gerador de senhas</h2>
     <h3 class="titulo-secundario">gere instataneamente uma senha aleátoria e segura</h3>
 </body>
