--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
 </head>
 <body>
+    <div class="conteudo-titulo">
     <img src="aula01_FCF-04.webp" alt="cadeado fechado">
     <h2 class="titulo-principal">gerador de senhas</h2>
     <h3 class="titulo-secundario">gere instataneamente uma senha aleátoria e segura</h3>
+</div>
 </body>
 </html>
