--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <img src="aula01_FCF-04.webp" alt="cadeado fechado">
 
 </div>
+<div class="conteudo-senha">
+    <label for="senha">senha</label>
+    <input name="senha" type="text" id="campo-senha">
+</div>
 </body>
 </html>
